# ApplyTrack

./: .env.example  .gitignore  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.example.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/src/applytrack/: main.py  seed.py
backend/src/applytrack/api/: ai.py  applications.py  auth.py  companies.py  deps.py  job_postings.py  profile.py  reminders.py  router.py
backend/src/applytrack/core/: config.py  security.py
backend/src/applytrack/db/: session.py
backend/src/applytrack/db/migrations/: env.py
backend/src/applytrack/db/migrations/versions/: 2026_02_15_1931-08a01a663c9b_initial_migration.py
backend/src/applytrack/db/models/: __init__.py  activity_event.py  ai_output.py  application.py  company.py  job_posting.py  profile.py  reminder.py  user.py
backend/src/applytrack/schemas/: ai_schemas.py  application.py  auth.py  company.py  profile.py  reminder.py
backend/src/applytrack/services/ai/: client.py  prompts.py
backend/src/applytrack/workers/: celery_app.py  tasks_ai.py
backend/tests/: conftest.py  test_ai.py  test_applications.py  test_auth.py  test_profile.py  test_reminders.py  test_schemas.py
frontend/: .gitignore  Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/applications/: page.tsx
frontend/src/app/applications/[id]/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: AIOutputDisplay.tsx  ApplicationCard.tsx  KanbanColumn.tsx  Navbar.tsx  NewApplicationModal.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts  types.ts
