[project]
name = "applytrack"
version = "0.2.0"
description = "Open-source job-application tracker with AI-powered resume tailoring."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Mohamad Razavi"},
]

dependencies = [
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.30,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "alembic>=1.13,<2",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "celery>=5.4,<6",
    "redis>=5.0,<6",
    "python-jose[cryptography]>=3.3,<4",
    "passlib[bcrypt]>=1.7,<2",
    "argon2-cffi>=23.1",
    "openai>=1.30,<2",
    "python-multipart>=0.0.9",
    "email-validator>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<1",
    "httpx>=0.27,<1",
    "aiosqlite>=0.20,<1",
    "ruff>=0.4,<1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
